Fix blur on code blocks blurring copy button

--- a/quartz/quartz/styles/custom.scss
+++ b/quartz/quartz/styles/custom.scss
@@ -25,7 +25,7 @@ h2::before {
   position: relative;
 }
 
-code {
+pre {
   backdrop-filter: blur(.12rem);
 }
 
